--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,5 @@
 <!-- Page Content -->
-<div class="container" style="margin-top: 7%;">
+<div class="container" style="margin-top: 1%;">
 
 	<!-- Page Heading/Breadcrumbs -->
 	<div class="row">
@@ -21,7 +21,8 @@
 	    <!-- Map Column -->
 	    <div class="col-md-8">
 	        <!-- Embedded Google Map -->
-	        <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=25.4917757,81.8635193&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+	        <!--<iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=25.4917757,81.8635193&amp;t=m&amp;z=4&amp;output=embed"></iframe>-->
+	        <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=25.4917757,81.8635193&z=15&output=embed"></iframe>
 	    </div>
 	    <!-- Contact Details Column -->
 	    <div class="col-md-4">
@@ -93,6 +94,6 @@
 
 	</div>
 	<!-- /.row -->
-	<
+	
 	
 </div>
