--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
-<header id="myCarousel" class="carousel slide">
-    <!-- Indicators -->
+<!--<header id="myCarousel" class="carousel slide">
+    
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
     </ol>
-    <!-- Wrapper for slides -->
+    
     <div class="carousel-inner">
         <div class="item active">
             <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
@@ -27,19 +27,186 @@
         </div>
     </div>
 
-    <!-- Controls -->
+    
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
         <span class="icon-prev"></span>
     </a>
     <a class="right carousel-control" href="#myCarousel" data-slide="next">
         <span class="icon-next"></span>
     </a>
-</header>
+</header>-->
+<!-- START CAROUSEL -->
+    <div>
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
 
-<!-- Page Content -->
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+
+                <div class="item active">
+                    <img src="/images/3.jpg" alt="..." style="width: 100%;">
+                    <div class="carousel-caption">
+                        ...
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="/images/2.jpg" alt="..." style="width: 100%;">
+                    <div class="carousel-caption">
+                        ...
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="/images/3.jpg" alt="..." style="width: 100%;">
+                    <div class="carousel-caption">
+                        ...
+                    </div>
+                </div>
+
+
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    <!-- END OF CAROUSEL-->
+    
+
+    <div id="t3-mainbody" class="container t3-mainbody">
+        <div class="main-container">
+            <div class="row">
+                <!-- MAIN CONTENT -->
+                <div id="t3-content" class="t3-content col-xs-12 col-md-6" style="background: white;box-shadow: 0 0 3px rgba(0,0,0,0.15),-1px 0 0 rgba(0,0,0,0.03),1px 0 1px rgba(0,0,0,0.03),0 1px 0 rgba(0,0,0,0.12);padding: 20px;">
+                    <!-- CONTENT MASS TOP -->
+                    <div class="content-mass-top ">
+                        <div class="t3-module module " id="Mod98">
+                            <div class="module-inner">
+                                <h3 class="module-title "><span><span class="fa fa-newspaper-o"></span> News and Announcements</span></h3>
+                                <div class="module-ct">
+                                    <div class="ja-sidenews-list clearfix">
+                                        <div class="ja-slidenews-item">
+                                            <img src="images/news/sam-12_140_100.jpg" align="left" />
+                                            <a class="ja-title" href="news-and-events/103-proponents-say-everyday-math-adds-up-though-some-don-t-understand-how.html">Proponents say Everyday Math adds up, though some don't understand how</a>
+                                            <span class="ja-createdate">Monday, 13 August 2012 </span> Nunc luctus neque eu orci adipiscing porttitor. Donec consectetur ante in turpis...
+                                        </div>
+                                        <div class="ja-slidenews-item">
+                                            <img src="images/news/sam-13_140_100.jpg" align="left" />
+                                            <a class="ja-title" href="news-and-events/102-forget-about-the-mandate-let-s-fix-health-care.html">Forget about the mandate. Let’s fix health care</a>
+                                            <span class="ja-createdate">Monday, 13 August 2012 </span> Vestibulum accumsan habitasse dictum id ut Curabitur amet libero mauris condimentum....
+                                        </div>
+                                        <div class="ja-slidenews-item">
+                                            <img src="images/news/sam-14_140_100.jpg" align="left" />
+                                            <a class="ja-title" href="news-and-events/101-creative-essay-challenge-inspires-college-community.html">Creative essay challenge inspires College community</a>
+                                            <span class="ja-createdate">Monday, 13 August 2012 </span> Ut in lobortis Nulla Sed augue Morbi sem consequat a quis. Dui Quisque Aenean Vivamus...
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- CONTENT MASS TOP -->
+
+                </div>
+                <!-- //MAIN CONTENT -->
+                <div class="t3-sidebar col-xs-12 col-sm-5 col-sm-push-1" style="background: white;box-shadow: 0 0 3px rgba(0,0,0,0.15),-1px 0 0 rgba(0,0,0,0.03),1px 0 1px rgba(0,0,0,0.03),0 1px 0 rgba(0,0,0,0.12);padding: 20px;">
+                    <div class="t3-module module search-course " id="Mod119">
+                        <div class="module-inner">
+                            <h3 class="module-title "><span><span class="fa fa-briefcase"></span> Jobs and Internships</span></h3>
+                            <div class="col-sm-12" style="border-bottom: 1px solid #efece1;">
+
+                                <div class="ja-slidenews-item">
+
+                                    <a class="ja-title" href="#" style="color: #1E7896">
+                                        <b>Proponents say Everyday Math adds up, though some don't understand how</b></a>
+                                    <span class="ja-createdate"><b>APPLY BY:</b>  Monday, 13 August 2012 </span>
+
+                                    <button class="btn btn-info" style="background: #2d4360;float: right;border: none;margin-bottom: 10px;">APPLY</button>
+                                </div>
+
+                                <div class="ja-slidenews-item">
+
+                                    <a class="ja-title" href="#" style="color: #1E7896">
+                                        <b>Proponents say Everyday Math adds up, though some don't understand how</b></a>
+                                    <span class="ja-createdate"><b>APPLY BY:</b>  Monday, 13 August 2012 </span>
+
+
+                                    <button class="btn btn-info" style="background: #2d4360;float: right;border: none;margin-bottom: 10px;">APPLY</button>
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="t3-sidebar col-xs-12 col-sm-5 col-sm-push-1" style="background: white;box-shadow: 0 0 3px rgba(0,0,0,0.15),-1px 0 0 rgba(0,0,0,0.03),1px 0 1px rgba(0,0,0,0.03),0 1px 0 rgba(0,0,0,0.12);padding: 20px;margin-top: 20px;">
+                    <div class="t3-module module search-course " id="Mod119" style="margin-bottom: 0">
+                        <div class="module-inner">
+                            <h3 class="module-title "><span><span class="fa fa-calendar"></span> Upcoming Events</span></h3>
+
+
+                            <div class="row">
+                                <div class="col-sm-4" style="border-right: 1px solid #efece1;">
+                                    <center>
+                                        <div class="col-sm-12">
+                                            <p style="font-size: 4.5rem;line-height: 3.5rem;font-weight: bold;margin-bottom: 2px;color: #2d4360;">13</p>
+                                        </div>
+                                    </center>
+                                    <center>
+                                        <div class="col-sm-12">June, 2016</div>
+                                    </center>
+                                </div>
+                                <div class="col-sm-8">
+                                    <p style="color: #1E7896;font-size: 16px">International Conference on web development</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row" style="margin-top: 5%; ">
+                            <div class="col-sm-4" style="border-right: 1px solid #efece1;">
+                                <center>
+                                    <div class="col-sm-12">
+                                        <p style="font-size: 4.5rem;line-height: 3.5rem;font-weight: bold;margin-bottom: 2px;color: #2d4360;">15</p>
+                                    </div>
+                                </center>
+                                <center>
+                                    <div class="col-sm-12">December, 2016</div>
+                                </center>
+                            </div>
+                            <div class="col-sm-8">
+                                <p style="color: #1E7896;font-size: 16px">International Conference on web development</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+<!--
+
+
     <div class="container" style="margin-top: -10px;">
 
-        <!-- Marketing Icons Section -->
+        
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header" style="text-align: center;">
@@ -87,9 +254,8 @@
 	            </div>
 	        </div>    
         </div>
-        <!-- /.row -->
+        
 
-        <!-- Portfolio Section -->
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Gallery</h2>
@@ -125,9 +291,7 @@
                 </a>
             </div>
         </div>
-        <!-- /.row -->
-
-        <!-- Features Section -->
+    
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Modern Business Features</h2>
@@ -149,11 +313,11 @@
                 <img class="img-responsive" src="http://placehold.it/700x450" alt="">
             </div>
         </div>
-        <!-- /.row -->
+        
 
         <hr>
 
-        <!-- Call to Action Section -->
+        
         <div class="well">
             <div class="row">
                 <div class="col-md-8">
@@ -164,4 +328,4 @@
                 </div>
             </div>
         </div>
-<!-- /.container -->
+-->
